2009-07-29  John W. Eaton  <jwe@octave.org>

	* ov-float.cc, ov-flt-re-mat.cc, ov-re-mat.cc, ov-re-sparse.cc,
	ov-scalar.cc: Use complex function for acos mapper if arg is out
	of range [-1, 1].

2009-07-29  John W. Eaton  <jwe@octave.org>

	* parse.y (param_list_end): Also set
	lexer_flags.looking_for_object_index to false.

2009-07-24  John W. Eaton  <jwe@octave.org>

	* pt-mat.cc (DO_SINGLE_TYPE_CONCAT_NO_MUTATE): New macro.
	(tree_matrix::rvalue1): Use it to avoid complex -> real conversion.

2009-07-23  Jaroslav Hajek  <highegg@gmail.com>

	* DLD-FUNCTIONS/chol.cc (Fcholupdate,
	Fcholinsert, Fcholdelete, Fcholshift): Replace is_matrix_type ->
	is_numeric_type.

2009-07-20  Aleksej Saushev  <asau@inbox.ru>

	* sysdep.cc: Also define BSD_init if __NetBSD__ is defined.
	(sysdep_init): Also call BSD_init if __NetBSD__ is defined.

2009-07-20  Jaroslav Hajek  <highegg@gmail.com>

	* bitfcns.cc (DO_UBITSHIFT): Avoid overflow.
	(DO_SBITSHIFT): Fix mask calculation. 

2009-07-17  Benjamin Lindner <lindnerb@users.sourceforge.net>

	* DLD-FUNCTIONS/__magick_read__.cc (F__magick_read__):
	Determine correct number of bits required when reading images.

2009-07-16  John W. Eaton  <jwe@octave.org>

	* graphics.cc (get_array_limits): Require min_pos value to be
	greater than zero.

2009-07-08  John W. Eaton  <jwe@octave.org>

	* pt-assign.cc (maybe_warn_former_built_in_variable): Improve message.

	2009-07-21  Jaroslav Hajek  <highegg@gmail.com>

	Version 3.2.2 released.

2009-07-03  Jaroslav Hajek  <highegg@gmail.com>

	* pt-eval.cc (do_unwind_protect_cleanup_code): Add missing
	unwind_protect::run.

2009-07-02  Jaroslav Hajek  <highegg@gmail.com>

	* help.cc (do_which): Also look for files.

2009-07-02  Jaroslav Hajek  <highegg@gmail.com>

	* Cell.cc (Cell::index): Use proper resize_fill_value.

2008-07-01  David Bateman  <dbateman@free.fr>
	
	* pr-output.cc (static inline std::string rational_approx (double, 