@@ -1,3 +1,9 @@
+2009-08-07  Jaroslav Hajek  <highegg@gmail.com>
+
+	* pt-idx.cc (tree_index_expression::lvalue): Implant code from
+	development version.
+	(get_numel): New assistant function.
+
 2009-07-29  John W. Eaton  <jwe@octave.org>
 
 	* ov-float.cc, ov-flt-re-mat.cc, ov-re-mat.cc, ov-re-sparse.cc,
